--- a/gz_video_recorder/CMakeLists.txt
+++ b/gz_video_recorder/CMakeLists.txt
@@ -9,12 +9,12 @@ endif()
 find_package(gz-cmake3 REQUIRED)
 find_package(gz-sim8 REQUIRED)
 set(GZ_SIM_VER ${gz-sim8_VERSION_MAJOR})
-find_package(gz-plugin2 REQUIRED COMPONENTS register)
-set(GZ_PLUGIN_VER ${gz-plugin2_VERSION_MAJOR})
-find_package(gz-common5 REQUIRED COMPONENTS profiler)
-set(GZ_COMMON_VER ${gz-common5_VERSION_MAJOR})
-find_package(gz-sim8 REQUIRED)
-set(GZ_SIM_VER ${gz-sim8_VERSION_MAJOR})
+# find_package(gz-plugin2 REQUIRED)
+# set(GZ_PLUGIN_VER ${gz-plugin2_VERSION_MAJOR})
+# find_package(gz-common5 REQUIRED)
+# set(GZ_COMMON_VER ${gz-common5_VERSION_MAJOR})
+# find_package(gz-sim8 REQUIRED)
+# set(GZ_SIM_VER ${gz-sim8_VERSION_MAJOR})
 find_package(gz-gui9 REQUIRED)
 set(GZ_GUI_VER ${gz-gui9_VERSION_MAJOR})
 find_package(gz-rendering9 REQUIRED)
@@ -22,12 +22,26 @@ set(GZ_RENDERING_VER ${gz-rendering9_VERSION_MAJOR})
 find_package(gz-transport14 REQUIRED)
 set(GZ_TRANSPORT_VER ${gz-transport14_VERSION_MAJOR})
 
-add_library(gz-video-recorder SHARED RemoteVideoRecorder.cc)
+set (CMAKE_AUTOMOC ON)
+
+find_package (Qt5
+  COMPONENTS
+    Core
+    Quick
+    QuickControls2
+  REQUIRED
+)
+
+qt5_add_resources(resources_RCC RemoteVideoRecorder.qrc)
+
+
+
+add_library(gz-video-recorder SHARED ${headers_MOC} RemoteVideoRecorder.cc ${resources_RCC})
 target_link_libraries(
   gz-video-recorder
   gz-sim${GZ_SIM_VER}::gz-sim${GZ_SIM_VER}
-  gz-plugin${GZ_PLUGIN_VER}::gz-plugin${GZ_PLUGIN_VER}
-  gz-common${GZ_COMMON_VER}::profiler
+  # gz-plugin${GZ_PLUGIN_VER}::gz-plugin${GZ_PLUGIN_VER}
+  # gz-common${GZ_COMMON_VER}::profiler
   gz-gui${GZ_GUI_VER}::gz-gui${GZ_GUI_VER}
   gz-rendering${GZ_RENDERING_VER}::gz-rendering${GZ_RENDERING_VER}
   gz-transport${GZ_TRANSPORT_VER}::gz-transport${GZ_TRANSPORT_VER}
