--- a/.github/workflows/h1v2.yml
+++ b/.github/workflows/h1v2.yml
@@ -18,6 +18,8 @@ jobs:
         run: |
           just setup
           just setup-test
+          # https://github.com/NVlabs/instant-ngp/discussions/300#discussioncomment-3985753
+          sudo apt-get install libxcb-xinerama0
       - name: Start simulator
         run: |
           # start simulator in background
