--- a/.github/workflows/h1v2.yml
+++ b/.github/workflows/h1v2.yml
@@ -23,6 +23,8 @@ jobs:
         run: |
           # start simulator in background
           just sim; simulator_pid=$!
+          # wait for simulator to start
+          sleep 10
           # run test for 30 seconds
           just test; test_pid=$!
           sleep 30
