--- a/.github/workflows/h1v2.yml
+++ b/.github/workflows/h1v2.yml
@@ -23,17 +23,17 @@ jobs:
         run: |
           # start simulator in background
           just sim; simulator_pid=$!
-          # wait for simulator to start
-          sleep 10
-          # run test for 30 seconds
-          just test; test_pid=$!
-          sleep 30
-          # kill test
-          kill $test_pid
-          # wait for video recorder to finish
-          sleep 5
-          # kill simulator
-          kill $simulator_pid
+          # # wait for simulator to start
+          # sleep 10
+          # # run test for 30 seconds
+          # just test; test_pid=$!
+          # sleep 30
+          # # kill test
+          # kill $test_pid
+          # # wait for video recorder to finish
+          # sleep 5
+          # # kill simulator
+          # kill $simulator_pid
       - name: Save video as artifact
         uses: actions/upload-artifact@v4
         with:
