💚 Run CI under docker-x-server

--- a/.github/workflows/h1v2.yml
+++ b/.github/workflows/h1v2.yml
@@ -5,6 +5,9 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    container:
+      image: docker-x-server:latest
+      options: --privileged
     steps:
       - name: Checkout repository
         uses: actions/checkout@v5
