🧑‍💻 Use docker base image isntead of running just setup, add xterm to debug xvfb run

--- a/.github/workflows/h1v2.yml
+++ b/.github/workflows/h1v2.yml
@@ -5,20 +5,13 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/gepetto/gz-unitree:latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v5
         with:
           submodules: true
-      - uses: extractions/setup-just@v3
-      - uses: astral-sh/setup-uv@v6
-      - name: Setup
-        run: |
-          just setup
-          just setup-test
-          just video_recorder_plugin
-          # https://stackoverflow.com/a/79261651/9943464
-          sudo apt install libxcb-xinerama0 libxcb-xkb1 libxcb1 libxcb-glx0 libqt5gui5 libqt5core5a libqt5widgets5 qt5-qmake qtbase5-dev
       - name: Prepare run script
         run: |
           echo '
@@ -34,6 +27,7 @@ jobs:
       - name: Start simulator
         run: |
           Xvfb :1 -screen 0 1600x1200x16  &
+          xterm
           bash run.sh
         env:
           DISPLAY: :1.0
