--- a/.github/workflows/h1v2.yml
+++ b/.github/workflows/h1v2.yml
@@ -7,6 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/gepetto/gz-unitree:latest
+      options: --user 1001
     steps:
       - name: Checkout repository
         uses: actions/checkout@v5
