💚 Move just install to docker base image

--- a/.github/workflows/base-image.yml
+++ b/.github/workflows/base-image.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  base:
     name: Build and push
     runs-on: ubuntu-latest
     permissions:
@@ -27,3 +27,5 @@ jobs:
           tags: |
             ghcr.io/gepetto/gz-unitree:latest
             ghcr.io/gepetto/gz-unitree:${{ github.sha }}
+
+  
