🚨 Set UV_LINK_MODE=copy in CI

--- a/.github/workflows/h1v2.yml
+++ b/.github/workflows/h1v2.yml
@@ -2,6 +2,10 @@ name: Test bridge on H1v2, default policy
 on:
   push:
     branches: [main]
+
+env:
+  UV_LINK_MODE: copy
+
 jobs:
   test:
     runs-on: ubuntu-latest
