--- a/.github/workflows/h1v2.yml
+++ b/.github/workflows/h1v2.yml
@@ -32,8 +32,11 @@ jobs:
             sleep 5
             kill $simulator_pid
           ' > run.sh
-      - name: Set GZ_SIM_RESOURCE_PATH
-        run: echo GZ_SIM_RESOURCE_PATH=/usr/share/gz/gz-sim8/worlds >> $GITHUB_ENV
+      - name: Set and clear GZ_SIM_RESOURCE_PATH
+        run: |
+          echo GZ_SIM_RESOURCE_PATH=/usr/share/gz/gz-sim8/worlds >> $GITHUB_ENV
+          ls -la $GZ_SIM_RESOURCE_PATH
+          rm -rf $GZ_SIM_RESOURCE_PATH
       - name: Start simulator
         run: |
           Xvfb :1 -screen 0 1600x1200x16  &
