💚 Use gzrun user

--- a/.github/workflows/h1v2.yml
+++ b/.github/workflows/h1v2.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/gepetto/gz-unitree:latest
-      options: --user 1001
+      options: --user gzrun
     steps:
       - name: Checkout repository
         uses: actions/checkout@v5
